--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "json-server": "json-server db.json"
   },
   "dependencies": {
-    "axios": "^0.23.0",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -34,7 +34,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "json-server": "^0.17.0",
-    "prettier": "^2.2.1",
+    "prettier": "2.4.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "typescript": "~4.1.5",
